--- a/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/TagFilterSetControlComponent/TagFilterSetSelector.xaml
+++ b/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/TagFilterSetControlComponent/TagFilterSetSelector.xaml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <communityToolkitControls:DockPanel
-    x:Class="Hitomi_Scroll_Viewer.MainWindowComponent.SearchPageComponent.TagFilterSelectorControl"
+    x:Class="Hitomi_Scroll_Viewer.MainWindowComponent.SearchPageComponent.TagFilterSetControlComponent.TagFilterSetSelector"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Hitomi_Scroll_Viewer.MainWindowComponent.SearchPageComponent"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:communityToolkitControls="using:CommunityToolkit.WinUI.UI.Controls"
+    xmlns:communityToolkitControls="using:CommunityToolkit.WinUI.Controls"
     mc:Ignorable="d"
     
     LastChildFill="False">
