--- a/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/TagFilterSetControlComponent/TagFilterCheckBox.xaml
+++ b/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/TagFilterSetControlComponent/TagFilterCheckBox.xaml
@@ -1,10 +1,11 @@
 <CheckBox
-    x:Class="Hitomi_Scroll_Viewer.MainWindowComponent.SearchPageComponent.TagFilterCheckBox"
+    x:Class="Hitomi_Scroll_Viewer.MainWindowComponent.SearchPageComponent.TagFilterSetControlComponent.TagFilterCheckBox"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    MinWidth="0">
-    <TextBlock Text="{x:Bind TagFilterName}" TextWrapping="Wrap"></TextBlock>
+    MinWidth="0"
+    Style="{StaticResource DefaultCheckBoxStyle}">
+    <TextBlock Text="{x:Bind TagFilterSetName}" TextWrapping="Wrap"></TextBlock>
 </CheckBox>
