finally made data bind and loading work

--- a/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/TagFilterSetEditor.xaml
+++ b/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/TagFilterSetEditor.xaml
@@ -38,6 +38,7 @@
         <ComboBox x:Name="TagFilterSetComboBox"
                   x:DefaultBindMode="OneWay"
                   DisplayMemberPath="Name"
+                  SelectedValuePath="Name"
                   SelectionChanged="TagFilterSetComboBox_SelectionChanged"
                   HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
         <Button x:Name="SaveButton"
