--- a/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/TagFilterSetEditorComponent/TagFilterSetSelector.xaml
+++ b/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/TagFilterSetEditorComponent/TagFilterSetSelector.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <communityToolkitControls:DockPanel
-    x:Class="Hitomi_Scroll_Viewer.MainWindowComponent.SearchPageComponent.TagFilterSetSelector"
+    x:Class="Hitomi_Scroll_Viewer.MainWindowComponent.SearchPageComponent.TagFilterSetEditorComponent.TagFilterSetSelector"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Hitomi_Scroll_Viewer.MainWindowComponent.SearchPageComponent"
