--- a/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/TagFilterSetEditorComponent/ActionContentDialog.xaml
+++ b/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/TagFilterSetEditorComponent/ActionContentDialog.xaml
@@ -10,12 +10,18 @@
     
     Style="{StaticResource DefaultContentDialogStyle}"
     >
+    <ContentDialog.Resources>
+        <x:Double x:Key="ContentDialogMaxWidth">4294967296</x:Double>
+        <x:Double x:Key="ActionContentDialogWidth">384</x:Double>
+    </ContentDialog.Resources>
     <ContentDialog.Title>
         <TextBlock x:Name="TitleTextBlock"
-                   TextWrapping="WrapWholeWords"/>
+                   TextWrapping="WrapWholeWords"
+                   MaxWidth="{StaticResource ActionContentDialogWidth}"/>
     </ContentDialog.Title>
     <Grid x:Name="ContentGrid"
-          HorizontalAlignment="Stretch">
+          Width="{StaticResource ActionContentDialogWidth}"
+          >
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
@@ -25,6 +31,7 @@
         </Grid.ColumnDefinitions>
         <TextBox x:Name="InputTextBox"
                  Grid.Row="0"
+                 Width="{StaticResource ActionContentDialogWidth}"
                  />
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
