--- a/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/TagFilterSetSelectorComponent/TagFilterCheckBox.xaml
+++ b/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/TagFilterSetSelectorComponent/TagFilterCheckBox.xaml
@@ -7,5 +7,5 @@
     mc:Ignorable="d"
     MinWidth="0"
     Style="{StaticResource DefaultCheckBoxStyle}">
-    <TextBlock Text="{x:Bind TagFilterSetName}" TextWrapping="Wrap"/>
+    <TextBlock Text="{x:Bind TagFilterSet.Name, Mode=OneWay}" TextWrapping="Wrap"/>
 </CheckBox>
