--- a/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPage.xaml
+++ b/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPage.xaml
@@ -8,63 +8,110 @@
     xmlns:controls="using:CommunityToolkit.WinUI.Controls"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-    <ScrollViewer>
-        <StackPanel Orientation="Vertical"
-                    Spacing="8"
-                    Padding="16">
-            <Grid ColumnSpacing="8" RowSpacing="8"
-                  Height="864">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="3*"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <spc:TagFilterSetEditor x:Name="TagFilterSetEditor"
-                                        Grid.Row="0" Grid.RowSpan="2"
-                                        Grid.Column="0"
-                                        HyperlinkCreateButton="{x:Bind HyperlinkCreateButton}"
-                                        />
-                <Grid Grid.Row="0" Grid.Column="1"
-                            VerticalAlignment="Stretch"
-                            RowSpacing="16"
-                            >
+    <Grid>
+        <ScrollViewer>
+            <StackPanel x:Name="MainContainerStackPanel"
+                        Orientation="Vertical"
+                        Spacing="8"
+                        Padding="16">
+                <Grid x:Name="MainControlGrid"
+                      ColumnSpacing="8" RowSpacing="8"
+                      >
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <spc:SyncManager Grid.Row="0"/>
-                    <Grid Grid.Row="1"
-                          Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
-                          BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
-                          CornerRadius="{StaticResource OverlayCornerRadius}"
-                          BorderThickness="1"
-                          RowSpacing="16"
-                          Padding="16"
-                          VerticalAlignment="Stretch">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <spc:TagFilterSetEditor x:Name="TagFilterSetEditor"
+                                            Grid.Row="0" Grid.RowSpan="2"
+                                            Grid.Column="0"
+                                            HyperlinkCreateButton="{x:Bind HyperlinkCreateButton}"
+                                            />
+                    <Grid Grid.Row="0" Grid.Column="1"
+                                VerticalAlignment="Stretch"
+                                RowSpacing="16"
+                                >
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <Button x:Name="HyperlinkCreateButton"
-                                Grid.Row="0"
-                                Click="HyperlinkCreateButton_Clicked"
-                                MinHeight="80"
-                                BorderBrush="DeepPink"
-                                HorizontalAlignment="Stretch"
-                                IsEnabled="False">
-                            <TextBlock x:Uid="/SearchPage/CreateHyperlinkBtnTextBlock"
-                                       FontSize="{StaticResource SubtitleTextBlockFontSize}"/>
-                        </Button>
-                        <ListView x:Name="SearchLinkItemsListView"
-                                  Grid.Row="1"
-                                  ItemsSource="{x:Bind _searchLinkItems}"
+                        <spc:SyncManager Grid.Row="0"/>
+                        <Grid Grid.Row="1"
+                              Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+                              BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+                              CornerRadius="{StaticResource OverlayCornerRadius}"
+                              BorderThickness="1"
+                              RowSpacing="16"
+                              Padding="16"
+                              VerticalAlignment="Stretch">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <Button x:Name="HyperlinkCreateButton"
+                                    Grid.Row="0"
+                                    Click="HyperlinkCreateButton_Clicked"
+                                    BorderBrush="DeepPink"
+                                    HorizontalAlignment="Stretch"
+                                    IsEnabled="False"
+                                    Padding="16">
+                                <TextBlock x:Uid="/SearchPage/CreateHyperlinkBtnTextBlock"
+                                           FontSize="{StaticResource SubtitleTextBlockFontSize}"/>
+                            </Button>
+                            <ListView x:Name="SearchLinkItemsListView"
+                                      Grid.Row="1"
+                                      ItemsSource="{x:Bind _searchLinkItems}"
+                                      SelectionMode="None" IsItemClickEnabled="False">
+                                <ListView.ItemsPanel>
+                                    <ItemsPanelTemplate>
+                                        <StackPanel Spacing="4" Padding="8"></StackPanel>
+                                    </ItemsPanelTemplate>
+                                </ListView.ItemsPanel>
+                                <ListView.ItemContainerStyle>
+                                    <Style TargetType="ListViewItem" BasedOn="{StaticResource DefaultListViewItemStyle}">
+                                        <!--see https://github.com/dotnet/maui/issues/8564
+                                                https://github.com/dotnet/maui/pull/10250
+                                                https://github.com/dotnet/maui/pull/10250/commits/ca8a76576ee3b4f692bd3a3182972120c6c8e071-->
+                                        <Setter Property="Padding" Value="0"/>
+                                    </Style>
+                                </ListView.ItemContainerStyle>
+                            </ListView>
+                        </Grid>
+                    </Grid>
+                    <StackPanel Grid.Row="1" Grid.Column="1"
+                                Orientation="Vertical"
+                                Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+                                BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+                                CornerRadius="{StaticResource OverlayCornerRadius}"
+                                BorderThickness="1"
+                                Padding="16">
+                        <Grid ColumnSpacing="10">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBox x:Name="GalleryIDTextBox" x:Uid="/SearchPage/GalleryIDTextBox"
+                                     Grid.Column="0"
+                                     VerticalAlignment="Stretch"
+                                     TextWrapping="Wrap"
+                                     AcceptsReturn="True"
+                                     />
+                            <Button x:Name="DownloadButton"
+                                    Grid.Column="1" Padding="32"
+                                    HorizontalAlignment="Center" VerticalAlignment="Center"
+                                    Click="DownloadBtn_Clicked"
+                                    IsEnabled="False">
+                                <SymbolIcon Symbol="Download"></SymbolIcon>
+                            </Button>
+                        </Grid>
+                        <ListView x:Name="DownloadItemsListView" ItemsSource="{x:Bind DownloadingItems}"
                                   SelectionMode="None" IsItemClickEnabled="False">
                             <ListView.ItemsPanel>
                                 <ItemsPanelTemplate>
-                                    <StackPanel Spacing="4" Padding="8"></StackPanel>
+                                    <StackPanel Spacing="4"></StackPanel>
                                 </ItemsPanelTemplate>
                             </ListView.ItemsPanel>
                             <ListView.ItemContainerStyle>
@@ -76,82 +123,43 @@
                                 </Style>
                             </ListView.ItemContainerStyle>
                         </ListView>
-                    </Grid>
+                    </StackPanel>
                 </Grid>
-                <StackPanel Grid.Row="1" Grid.Column="1"
-                            Orientation="Vertical"
-                            Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
-                            BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
-                            CornerRadius="{StaticResource OverlayCornerRadius}"
-                            BorderThickness="1"
-                            Padding="16">
-                    <Grid ColumnSpacing="10">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
-                        <TextBox x:Name="GalleryIDTextBox" x:Uid="/SearchPage/GalleryIDTextBox"
-                                 Grid.Column="0"
-                                 Height="120"
-                                 TextWrapping="Wrap"
-                                 AcceptsReturn="True"
-                                 />
-                        <Button x:Name="DownloadButton"
-                                Grid.Column="1" Padding="32"
-                                HorizontalAlignment="Center" VerticalAlignment="Center"
-                                Click="DownloadBtn_Clicked"
-                                IsEnabled="False">
-                            <SymbolIcon Symbol="Download"></SymbolIcon>
-                        </Button>
-                    </Grid>
-                    <ListView x:Name="DownloadItemsListView" ItemsSource="{x:Bind DownloadingItems}"
-                              SelectionMode="None" IsItemClickEnabled="False">
-                        <ListView.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <StackPanel Spacing="4"></StackPanel>
-                            </ItemsPanelTemplate>
-                        </ListView.ItemsPanel>
-                        <ListView.ItemContainerStyle>
-                            <Style TargetType="ListViewItem" BasedOn="{StaticResource DefaultListViewItemStyle}">
-                                <!--see https://github.com/dotnet/maui/issues/8564
-                                        https://github.com/dotnet/maui/pull/10250
-                                        https://github.com/dotnet/maui/pull/10250/commits/ca8a76576ee3b4f692bd3a3182972120c6c8e071-->
-                                <Setter Property="Padding" Value="0"/>
-                            </Style>
-                        </ListView.ItemContainerStyle>
-                    </ListView>
-                </StackPanel>
-            </Grid>
-            <!--<Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock x:Name="BookmarkHeader"
-                           Grid.Column="0"
-                           Style="{StaticResource TitleTextBlockStyle}"
-                           VerticalAlignment="Center" HorizontalAlignment="Left"/>
-                <StackPanel Grid.Column="1"
-                            Orientation="Horizontal"
-                            VerticalAlignment="Bottom" HorizontalAlignment="Center"
-                            Spacing="8">
-                    <TextBlock x:Name="BookmarkPageSelectorHeader"
-                               VerticalAlignment="Center"/>
-                    <ComboBox x:Name="BookmarkPageSelector"/>
-                </StackPanel>
-                <StackPanel Grid.Column="2"
-                            Orientation="Horizontal"
-                            VerticalAlignment="Bottom" HorizontalAlignment="Right"
-                            Spacing="8">
-                    <TextBlock x:Name="BookmarkNumPerPageSelectorHeader"
-                               VerticalAlignment="Center"/>
-                    <ComboBox x:Name="BookmarkNumPerPageSelector"
-                              ItemsSource="{x:Bind _bookmarkNumPerPageRange}"
-                              SelectionChanged="BookmarkNumPerPageSelector_SelectionChanged"/>
-                </StackPanel>
-            </Grid>
-            <StackPanel x:Name="BookmarkPanel" Orientation="Vertical" Spacing="16"/>-->
-        </StackPanel>
-    </ScrollViewer>
+
+                <!--<Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock x:Name="BookmarkHeader"
+                               Grid.Column="0"
+                               Style="{StaticResource TitleTextBlockStyle}"
+                               VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                    <StackPanel Grid.Column="1"
+                                Orientation="Horizontal"
+                                VerticalAlignment="Bottom" HorizontalAlignment="Center"
+                                Spacing="8">
+                        <TextBlock x:Name="BookmarkPageSelectorHeader"
+                                   VerticalAlignment="Center"/>
+                        <ComboBox x:Name="BookmarkPageSelector"/>
+                    </StackPanel>
+                    <StackPanel Grid.Column="2"
+                                Orientation="Horizontal"
+                                VerticalAlignment="Bottom" HorizontalAlignment="Right"
+                                Spacing="8">
+                        <TextBlock x:Name="BookmarkNumPerPageSelectorHeader"
+                                   VerticalAlignment="Center"/>
+                        <ComboBox x:Name="BookmarkNumPerPageSelector"
+                                  ItemsSource="{x:Bind _bookmarkNumPerPageRange}"
+                                  SelectionChanged="BookmarkNumPerPageSelector_SelectionChanged"/>
+                    </StackPanel>
+                </Grid>
+                <StackPanel x:Name="BookmarkPanel" Orientation="Vertical" Spacing="16"/>-->
+            </StackPanel>
+        </ScrollViewer>
+        <StackPanel x:Name="PopupInfoBarStackPanel"
+                    VerticalAlignment="Bottom" HorizontalAlignment="Center"
+                    Spacing="4"/>
+    </Grid>
 </Page>
