--- a/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/TagFilterSetEditorComponent/TagFilterSetSelectorComponent/TagFilterCheckBox.xaml
+++ b/Hitomi-Scroll-Viewer/MainWindowComponent/SearchPageComponent/TagFilterSetEditorComponent/TagFilterSetSelectorComponent/TagFilterCheckBox.xaml
@@ -1,5 +1,5 @@
 <CheckBox
-    x:Class="Hitomi_Scroll_Viewer.MainWindowComponent.SearchPageComponent.TagFilterSetSelectorComponent.TagFilterCheckBox"
+    x:Class="Hitomi_Scroll_Viewer.MainWindowComponent.SearchPageComponent.TagFilterSetEditorComponent.TagFilterSetSelectorComponent.TagFilterCheckBox"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
